tests/NormalTests/paczka1/fuzzy1/28465030.err
Error in line 5: Eeduq S387 26,1
Error in line 1: S1V3 A335 3,9
Error in line 9: c9G S140 18,5
Error in line 10: S1V3 S387 74,6
Error in line 14: c9G A335 11,6
Error in line 20: S497 A335 37,6
Error in line 37: S497 S140 -6,2
Error in line 40: eB8FpPS S387 24,m
